--- a/parts/res/xml/kamis_stuff_settings.xml
+++ b/parts/res/xml/kamis_stuff_settings.xml
@@ -25,5 +25,11 @@
         android:title="@string/performance_mode_title"
         android:summary="@string/performance_mode_summary"
         android:icon="@drawable/ic_performance" />
+        
+    <Preference
+        android:key="game_bar"
+        android:title="@string/game_bar_title"
+        android:summary="@string/game_bar_summary"
+        android:icon="@drawable/ic_gamebar" />
 
 </PreferenceScreen>
