stone: parts: Introduce GameBar v4.0
[elpaablo]: Import from https://github.com/Chaitanyakm/device_xiaomi_sm8450-common
            Merge GameBar boot receiver into parts boot receiver
Signed-off-by: elpaablo <donopwhile1@gmail.com>

sm8450-common: parts: Introduce GameBar v4.0
Signed-off-by: kenway214 <kenway214@outlook.com>

peridot: parts: Add FPS meter support with selectable method for GameBar

- Introduced `GameBarFpsMeter` class to support FPS overlay using the new Android 13+ TaskFpsCallback API.
- Added fallback legacy sysfs method (`/sys/class/drm/sde-crtc-0/measured_fps`) for older devices.
- Updated GameBar to show FPS using selected method.

Signed-off-by: kenway214 <kenway214@outlook.com>

bump to v4
4

--- a/parts/res/xml/kamis_stuff_settings.xml
+++ b/parts/res/xml/kamis_stuff_settings.xml
@@ -26,4 +26,10 @@
         android:summary="@string/zram_summary"
         android:icon="@drawable/ic_zram" />
 
+    <Preference
+        android:key="game_bar"
+        android:title="@string/game_bar_title"
+        android:summary="@string/game_bar_summary"
+        android:icon="@drawable/ic_gamebar" />
+
 </PreferenceScreen>
