--- a/parts/res/xml/kamis_stuff_settings.xml
+++ b/parts/res/xml/kamis_stuff_settings.xml
@@ -26,4 +26,10 @@
     	android:summary="@string/useless_mode_summary"
     	android:icon="@drawable/ic_useless" />
 
+    <Preference
+        android:key="performance"
+        android:title="@string/performance_mode_title"
+        android:summary="@string/performance_mode_summary"
+        android:icon="@drawable/ic_performance" />
+
 </PreferenceScreen>
